--- a/front-end/control/web/index.html
+++ b/front-end/control/web/index.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="\iot-car_front_end\front-end\assets\img\icons8-iot-65.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
+        <img src="iot-car_front_end\front-end\assets\img\icons8-iot-65.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
         IoT Car Control
       </a>
     </div>
