--- a/front-end/control/web/index.html
+++ b/front-end/control/web/index.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="\assets\img\icons8-iot-65.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
+        <img src="front-end/assets/img/icons8-iot-65.png" alt="Logo" width="30" height="30" class="d-inline-block align-top">
         IoT Car Control
       </a>
     </div>
